# XPERMath

./: .clang-format  CMakeLists.txt  README.md
xm/: XPERMathConfig.cmake.in  constants.h  math_helpers.h  matrix.h  matrix_transforms.h  misc_helpers.h  quaternion.h  vector.h  xm.h
